# kaggle-amex-default-prediction

./: .gitignore  Makefile  Models.dvc  README.md  data.dvc  environment.yml  pyproject.toml
.dvc/: config
research/: dataprep.ipynb  dataprep.py  ensemble.py  metric.py  random_forest.ipynb  train.ipynb  train.py  utils.py
research/notebooks/: EDA.ipynb
scripts/: push_data_to_s3.sh
